EB-2003-02-05-0: Bugfix:    qstat -r shows wrong dependencies
                 IZ:        #478
                 Bugtraq:   #4813188
                 Review:    Has to be done
                 Changed:   qstat

CR-2003-02-05-1  Testsuite: Throughput performance test:
                              Event client works now for 5.3 Version

CR-2003-02-05-0  Testsuite: Bugfix for Throughput performance test:
                            tcl error 

JG-2003-02-04-0: Bugfix:    qrsh silently truncated job arguments that 
                            exceeded 4k in size.
                 Review:    CR
                 Changed:   qrsh_starter

CR-2003-02-04-0: Testsuite: - Throughput performance test:
                              Event client works only for maintrunc ->
                                 added version check

CR-2003-02-03-0: Testsuite: - Fixed Tcl error for unitialized array in 
                              run_tests() procedure (for warnings)
                            - Fixed bug in issuezilla/141/check.exp
                              (wrong wait_for_jobend parameter settings)

AH-2003-01-31-1: Bugfix:    wrong usage reported by qstat -j <jobid>
                 Bugtraq:   #4794242
                 IZ:        #446
                 Review:    AS
                 Changed:   sge_execd

CR-2003-01-31-3: Testsuite: 1) New procedure: mod_user()
                            2) test qconf for options -Auser and -Muser
                 IZ:        #91

CR-2003-01-31-2: Bugfix:    qconf -Muser and qconf -Auser report no success
                            messages
                 Bugtraq:   #4811230
                 Review:    AH
                 Changed:   qconf

CR-2003-01-31-0  Testsuite: Throughput performance test:
                               - implemented resending of jobs in case of
                                 submit error

CR-2003-01-30-0  Testsuite: Throughput performance test: 
                               - medium test: