@@ -1,3 +1,7 @@
+CR-2003-02-05-2  Testsuite: Throughput performance test:
+                              New protocol path for test results
+                              when local spooldirs are used on execds
+
 EB-2003-02-05-0: Bugfix:    qstat -r shows wrong dependencies
                  IZ:        #478
                  Bugtraq:   #4813188
